--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Home Page</title>
     <!-- CSS -->
     <link rel="stylesheet" href="CSS/main.css">
-    <link rel="stylesheet" href="CSS/all.min.css">
-    <link rel="stylesheet" href="CSS/normaliz.css">
+    <!-- <link rel="stylesheet" href="CSS/all.min.css"> -->
+    <!-- <link rel="stylesheet" href="CSS/normaliz.css"> -->
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -72,7 +72,7 @@
                     </li>
                 </ul>
             </div>
-          
+
             <div class="kurLeft">
                 <ul>
                     <li id="studInfo">
@@ -125,7 +125,7 @@
             <div class="image">
                 <a href="">
                     <h2>Kur'an</h2>
-                    <img src="Images/kur'an.png" alt="">
+                    <img src="" alt="">
                 </a>
             </div>
         </div>
@@ -140,13 +140,12 @@
             </div>
             <div class="pictureInfo">
                 <div class="info">
-                    <h2>المعتبر عبد الصبور كيالي</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, molestiae a. Quam doloribus
                         atque
                         optio praesentium veritatis architecto eligendi distinctio! Placeat</p>
 
                 </div>
-                <img src="Images/personPhoto.png" alt="">
+                <img src="" alt="">
             </div>
         </div>
     </section>
