--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
     <!-- CSS -->
-    <link rel="stylesheet" href="CSS/main.css">
-    <!-- <link rel="stylesheet" href="CSS/all.min.css"> -->
-    <!-- <link rel="stylesheet" href="CSS/normaliz.css"> -->
+    <link rel="stylesheet" href="css/main.css">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -150,8 +148,6 @@
         </div>
     </section>
     <!-- End Section -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="JS/main.js"></script>
 </body>
 
 </html>
